examples/fail/parser/chained_comparison.bina
// EXPECT_PARSER_ERROR: chained comparison is not allowed
fn main() -> int {
    let x = 1 < 2 < 3;
    return 0;
}
